--- a/.gitignore
+++ b/.gitignore
@@ -108,12 +108,10 @@ local.properties
 
 # Code Recommenders
 .recommenders/
-.gitignore
-.gradle/
-.idea/
-build.gradle
-gradle/
-gradlew
-gradlew.bat
-settings.gradle
-src/
+
+/.idea/compiler.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/modules/
+/.idea/
+/.gradle/
