--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ apply plugin: 'kotlin'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 
+springBoot {
+    mainClass = 'com.epam.agentx.AgentXApplication'
+}
+
 jar {
     baseName = 'AgentX'
     version = '0.0.1-SNAPSHOT'
