--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ repositories {
     mavenCentral()
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "https://repo.spring.io/milestone" }
+    maven { url "http://jcenter.bintray.com" }
 }
 
 
@@ -42,6 +43,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-rest')
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.7.5"
+    compile 'io.github.microutils:kotlin-logging:1.3'
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
