--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.7.5"
     compile 'io.github.microutils:kotlin-logging:1.3'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
