--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,14 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
+    compile("org.springframework.boot:spring-boot-starter-websocket")
+    compile("org.springframework:spring-messaging")
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.7.5"
     compile 'io.github.microutils:kotlin-logging:1.3'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
-
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
 }
 
 
